--- a/.github/workflows/doctor.yml
+++ b/.github/workflows/doctor.yml
@@ -1,8 +1,4 @@
-name: Monitor Something Specific ( Events, Orders, Enquiry, Tickets)
-
-# on:
-#   schedule:
-#   - cron : "0 */1 * * *"
+name: Monitor Button Status
 
 on:
   push:
@@ -30,7 +26,7 @@ jobs:
   notify:
     needs: check_button_status
     runs-on: ubuntu-latest
-    if: ${{ needs.check_button_status.outputs.buttonStatus == 'Button is disabled.' }}
+    if: ${{ always() }} # This line ensures the "notify" job is always evaluated
 
     steps:
       - name: Send email notification
