--- a/.github/workflows/doctor.yml
+++ b/.github/workflows/doctor.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '16'
 
@@ -25,10 +25,10 @@ jobs:
         run: |
           buttonStatus=$(node index.js)
           echo "Button status: $buttonStatus"
-          echo "$buttonStatus" >> $GITHUB_STATE
+          echo "$buttonStatus" >> $GITHUB_ENV
 
       - name: Attach screenshot and send email if button is disabled
-        if: ${{ needs.check_and_notify.outputs.buttonStatus == 'Button is disabled.' }}
+        if: ${{ needs.check_and_notify.outputs.run_script == 'Button is disabled.' }}
         run: |
           echo "Attaching screenshot..."
           mkdir -p $HOME/screenshot
