--- a/.github/workflows/doctor.yml
+++ b/.github/workflows/doctor.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   check_and_notify:
     runs-on: ubuntu-latest
+    outputs:
+      buttonStatus: ${{ steps.run_script.outputs.buttonStatus }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -25,10 +27,10 @@ jobs:
         run: |
           buttonStatus=$(node index.js)
           echo "Button status: $buttonStatus"
-          echo "BUTTON_STATUS=$buttonStatus" >> $GITHUB_ENV
+          echo "::set-output name=buttonStatus::$buttonStatus"
 
       - name: Attach screenshot and send email if button is disabled
-        if: ${{ steps.run_script.outputs.BUTTON_STATUS == 'Button is disabled.' }}
+        if: ${{ needs.check_button_status.outputs.buttonStatus == 'Button is disabled.' }}
         run: |
           echo "Attaching screenshot..."
           mkdir -p $HOME/screenshot
