--- a/.github/workflows/doctor.yml
+++ b/.github/workflows/doctor.yml
@@ -33,10 +33,8 @@ jobs:
         if: ${{ steps.run_script.outputs.buttonStatus == 'Button is disabled.' }}
         run: |
           echo "Attaching screenshot..."
-          mkdir -p $HOME/screenshot
-          cp /images/screenshot.png $HOME/screenshot/
           echo "Sending email notification..."
-          echo "::set-env name=SCREENSHOT_PATH::$HOME/screenshot/screenshot.png"
+          echo "::set-env name=SCREENSHOT_PATH::$HOME/images/screenshot.png"
 
       - name: Send email notification
         if: ${{ env.SCREENSHOT_PATH != '' }}
